bookshop-demo/bff/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: bff
spec:
  host: bff
  subsets:
  - name: v1
    labels:
      version: v1
