bookshop-demo/bff/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bff
spec:
  hosts:
  - "*"
  gateways:
  - bookshop-gateway
  http:
  - match:
    - uri:
        prefix: /bff/
    rewrite:
      uri: /
    route:
    - destination:
        host: bff
